Really suppress warnings about accessing sun.nio.fs